--- a/components/Navigation/LoginButton/styles.module.css
+++ b/components/Navigation/LoginButton/styles.module.css
@@ -14,7 +14,7 @@
   box-shadow: 0 4px 8px black;
 }
 
-@media (max-width: 450px) {
+@media (max-width: 768px) {
   .desktop {
     display: none;
   }
